--- a/Frontend/src/Components/DashSidebar/DashSidebar.css
+++ b/Frontend/src/Components/DashSidebar/DashSidebar.css
@@ -1,50 +1,55 @@
-/* DashSidebar.css */
-
-.sidebar {
-    width: 200px;
-    height: 100vh;
-    background-color: #fff;
-    color: #000000;
+.sidebar{
+    width: 180px;
+    background: #49454;
+    position: relative;
+    padding:0 5px;
+    transition: all 1s;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    font-weight: bold; /* Make the text bold */
+
+}
+body{
+    box-sizing: border-box;
 }
 
-.sidebar-logo-container {
-    display: flex; /* Add flexbox to the container */
-    justify-content: center; /* Center the logo horizontally */
-    align-items: center; /* Center the logo vertically */
-    margin-top: 10px;
-    margin-bottom: 10px; /* Space between the logo and the menu items */
+
+ul li 
+{
+    list-style-type: none;
 }
 
-.sidebar-logo {
-    width: 60%; /* Adjust the width of the logo */
+ul li a {
+    font-size: 16px;
+    display: block;
+    padding: 24px 10px;
+    border-radius: 10px;
+    transition: background-color 0.3s ease; 
+
+}
+
+ul li a:hover{
+background-color: #2E5A88;
+transform: scale(1.05); /* Add a slight scaling effect */
+
+}
+
+.logo {
+    width: 65%; /* Adjust the width of the logo */
     height: auto;
     margin: 10px 0; /* Add some spacing around the logo */
 }
 
-.sidebar-item {
-    list-style: none;
-    margin: 10px 0;
+.sidebar-logo-container {
+    display: flex; /* Add flexbox to the container */
+    align-items: center; /* Center the logo vertically */
+    margin-top: 30px;
+    margin-left: 25px;
+    margin-bottom: 10px; /* Space between the logo and the menu items */
 }
 
-.sidebar-item a {
-    text-decoration: none; /* Remove the default link styling */
-    display: flex; /* Align icon and text */
-    align-items: center; /* Vertically center the content */
-    justify-content: flex-start; /* Align content to the left */
-    font-size: 16px;
-    transition: background-color 0.3s ease; /* Smooth hover transition */
-    border-radius: 30px;
-}
+ul li a svg{
+    margin-right : 10px; 
+    width: 20px;
 
-.sidebar-item:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-}
-
-.sidebar-icon {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px; /* Space between the icon and the label */
 }
