--- a/Frontend/src/Components/DashContent/DashLibrary.css
+++ b/Frontend/src/Components/DashContent/DashLibrary.css
@@ -28,6 +28,7 @@
     position: relative;
     min-height: 350px;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+    overflow-x: hidden; /* Enable vertical scrolling if needed */
 
 }
 
@@ -305,4 +306,3 @@
     width : 3%;
     padding-top: 6px;
 }
-
