added more cards

--- a/Frontend/src/Components/Carousel/Carousel.css
+++ b/Frontend/src/Components/Carousel/Carousel.css
@@ -27,7 +27,7 @@
 .slider{
     overflow: hidden;
     display: flex;
-    overflow-x: scroll;
+    overflow-x: hidden;
     scroll-behavior: smooth;
     width: 100%;
 
