--- a/Frontend/src/Components/DashContent/DashCard.css
+++ b/Frontend/src/Components/DashContent/DashCard.css
@@ -251,3 +251,81 @@
 .flashcard-modal-content button[type="submit"]:hover {
     background-color: #45a049;
 }
+
+.study-mode{
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    background-color: #f0f0f0;
+    padding: 20px;
+}
+
+.study-mode-container {
+    text-align: center;
+    padding: 20px;
+    max-width: 600px;
+    margin: 0 auto;
+    border-radius: 10px;
+    max-height: 600px;
+  }
+  
+  .study-button {
+    background-color: #124883;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .card-info {
+    font-size: 16px;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+  
+  .flashcard {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+    max-width: 300px;
+    max-height: 600px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .flashcard-contents {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 380px;
+    max-height: 600px;
+    padding: 90px;
+    text-align: center; 
+  }
+  
+  .card-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+  }
+  
+  .card-buttons button {
+    background-color: #124883;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center; /* Align buttons vertically */
+      
+  }
+  
+  .card-buttons button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
