--- a/Frontend/src/pages/SearchResultsPage/SearchResults.css
+++ b/Frontend/src/pages/SearchResultsPage/SearchResults.css
@@ -1,66 +1,14 @@
- 
-.results-box {
-    display: block;
-    height: 100vh;
-    padding-left: 100px;
 
+.results-container {
+  padding: 20px;
+  height: 100vh;
 }
 
-  .results-title {
-    text-align: center;
-    padding-top: 40px;
-    padding-bottom: 30px;
-  }
-  
-  .results-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-  }
-  
-  .deck-card {
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s;
-  }
-  
-  .deck-card:hover {
-    transform: scale(1.05);
-  }
-  
-  .deck-name {
-    font-size: 1.5em;
-    margin: 0;
-  }
-  
-  .deck-description {
-    color: #555;
-  }
-  
-  .deck-details {
-    margin: 10px 0;
-    font-size: 0.9em;
-  }
-  
-  .view-button {
-    background-color: #134883;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .view-button:hover {
-    background-color: #45a049;
-  }
-  
-  .no-results {
-    text-align: center;
-    font-size: 1.2em;
-    color: #777;
-  }
-  
+
+.results-title {
+  justify-self: center;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 30px;
+  width: 50vw;
+}
