--- a/Frontend/src/Components/ResultsDeck/ResultsDeck.css
+++ b/Frontend/src/Components/ResultsDeck/ResultsDeck.css
@@ -1,3 +1,37 @@
+  .results-container {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100vh;
+    width: 100%;
+  }
+
+  .results-title {
+    justify-self: center;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+  }
+
+  .results-list {
+    display: flex;
+    flex-direction: column;
+    height: 95%; 
+    padding: 10px;
+    border-right: 1px solid #ccc;
+    overflow-y: auto;
+  }
+
+
+  .results-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+  }
 
   .results-box {
     display: block;
@@ -6,13 +40,6 @@
 
   }
 
-  
-  .results-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-  }
-  
   .deck-card {
     background-color: #f9f9f9;
     border: 1px solid #ddd;
@@ -27,7 +54,7 @@
   }
   
   .deck-name {
-    font-size: 1.5em;
+    font-size: 20px;
     margin: 0;
   }
   
@@ -36,8 +63,8 @@
   }
   
   .deck-details {
-    padding: 20px;
-    margin: 10px 0;
+    padding: 10px;
+    margin-left: 10px;
     font-size: 0.9em;
   }
     
@@ -53,17 +80,20 @@
     padding-left: 10px;
   }
   
-  .results-list {
-    border-right: 1px solid #ccc;
-    padding: 10px;
-  }
-  
   .deck-item {
+    display: flex;
     cursor: pointer;
     padding: 10px;
+    height: 150px;
   }
   
   .deck-item:hover {
     background-color: #f0f0f0;
   }
   
+
+
+  .flashcard-content {
+    font-size: 30px;
+
+  }
