--- a/Frontend/src/Components/ResultsHome/ResultsHome.css
+++ b/Frontend/src/Components/ResultsHome/ResultsHome.css
@@ -83,7 +83,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 20px;
+    padding: 30px;
     border-radius: 30px;
 }
 
@@ -92,12 +92,12 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* Creates 4 equal columns */
     gap: 20px;
-    height: 200px;
+    max-height: 175px;
 }
 
+
 /* Ensures items are all equal size */
-.result-deck-item {
-    background-color: white;
+.result-deck-item-home {
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     background-color: #f9f9f9;
@@ -106,14 +106,64 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: flex-start;
     width: 100%;
+    height: 173px;
     box-sizing: border-box;
 }
 
-.deck-name {
+.deck-name-home {
     height: 50px;
-    overflow: hidden;               /* Hides any text that overflows the container */
-    text-overflow: ellipsis;        /* Adds "..." at the end when the text is too long */
-    display: block;                 /* Ensures the text is treated as a block-level element */
-    width: 100%;                    /* Ensures it takes the full width of the parent element */
+    font-size: 20px;
+    overflow: hidden;
+    display: block;
+    width: 100%;
+}
+
+
+.flashcard-question {
+    font-size: 1rem;
+    font-weight: bolder;
+}
+
+.preview {
+    width: 4rem;
+    height: 2rem;
+    background-color: #f0f0f0;
+    border: none;
+}
+
+.preview:hover {
+    background-color: #c1c1c1;
+}
+
+
+.modal-content {
+    position: relative;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 20px;
+    background: white;
+}
+
+.modal-button {
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+}
+
+.modal-button:hover {
+    background-color: #c1c1c1;
 }
