--- a/Frontend/src/Components/ResultsQuiz/ResultsQuiz.css
+++ b/Frontend/src/Components/ResultsQuiz/ResultsQuiz.css
@@ -94,7 +94,9 @@
   }
   
   .quiz-name {
-    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 350; 
+    margin-bottom: 15px;
   }
 
   
