--- a/Frontend/src/Components/ResultsDeck/ResultsDeck.css
+++ b/Frontend/src/Components/ResultsDeck/ResultsDeck.css
@@ -167,6 +167,10 @@
 
 }
 
+.result-deck-item:hover {
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
 
 .deck-item:hover {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
