--- a/Frontend/src/Components/ResultsHome/ResultsHome.css
+++ b/Frontend/src/Components/ResultsHome/ResultsHome.css
@@ -99,7 +99,8 @@
 /* Ensures items are all equal size */
 .result-deck-item-home {
     border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+    transition: box-shadow 0.3s ease;
     background-color: #f9f9f9;
     padding: 10px;
     cursor: pointer;
@@ -110,6 +111,10 @@
     width: 100%;
     height: 173px;
     box-sizing: border-box;
+}
+
+.result-deck-item-home:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .deck-name-home {
